--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,8 @@ ul {
 }
 
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 0;
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
