--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 :root {
   --main-color: #212121;
   --second-color: #757575;
-  --background-color:#ffffff;
+  --background-color: #ffffff;
 }
 
 html {
@@ -16,9 +16,9 @@ html {
 }
 
 .body {
-font-family: "Roboto", sans-serif;
-font-size: 14px;
-background-color: var(--background-color);
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  background-color: var(--background-color);
 }
 
 a {
@@ -35,35 +35,38 @@ ul {
   list-style: none;
 }
 
-header {
-  display: flex;
-  align-items: center;
-}
-
-h1, h2, h3, h4,h5, h6, p, ul {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
   margin-top: 0;
   margin-bottom: 0;
 }
+ul { padding-left: 0;}
 
 .container {
-  width: 1200px;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  width: 1170px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.line-header {
+  /* height: 80px; */
+  background-color: var(--background-color);
+  border-bottom: 1px solid #ececec;
 }
 
 /* logo-heder */
 
-.page-header {
-  position: absolute;
-  width: 1600px;
-  height: 80px;
-  background-color: var(--background-color);
-  border-bottom: 1px solid #ECECEC;;
-}
-
 .logo-heder {
-  margin-top: 24px;
-  margin-left: 215px;
+  /* margin-left: 215px; */
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
@@ -71,17 +74,24 @@ h1, h2, h3, h4,h5, h6, p, ul {
   letter-spacing: 0.03em;
   color: #2196f3;
 }
+
 .logo-heder > span {
   color: #000000;
 }
 
 /* navimenu */
 
+.header-nav {
+  display: flex;
+}
 
+.line-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .site-nav {
-  margin-top: 32px;
-  margin-left: 93px;
   display: flex;
   font-family: "Roboto";
   font-weight: 500;
@@ -89,27 +99,31 @@ h1, h2, h3, h4,h5, h6, p, ul {
   letter-spacing: 0.02em;
 }
 
+
+
+.site-nav .item + .item {
+  margin-left: 50px;
+}
+
 .site-nav .link {
   color: #2196f3;
 }
 
-.site-nav .item:not(last-child) {margin-right: 50px;}
-
-.site-nav .item {
-  display: block;
+.contact-nav {
+  display: flex;
 }
 
 .contacts {
-  margin-top: 32px;
-  margin-right: 50px;
   color: var(--second-color);
 }
 
+.contacts + .contacts {
+  margin-left: 50px;
+}
 
 /* hero */
 
 .hero {
-  width: 1600px;
   height: 600px;
   text-align: center;
   background-color: #2f303a;
@@ -117,10 +131,8 @@ h1, h2, h3, h4,h5, h6, p, ul {
 
 .hero-title {
   padding-top: 200px;
-  max-width: 696px;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 452px;
+  text-align: center;
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
@@ -131,6 +143,12 @@ h1, h2, h3, h4,h5, h6, p, ul {
 
 .hero-button {
   margin-top: 30px;
+  margin-bottom: 200px;
+  padding: 10px 32px;
+  text-align: center;
+  font-family: inherit;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
   cursor: pointer;
   font-weight: 700;
   font-size: 16px;
@@ -138,18 +156,26 @@ h1, h2, h3, h4,h5, h6, p, ul {
   color: #ffffff;
   background-color: #2196f3;
 }
-
 /* fetures */
 
 .fetures {
-  width: 1170px;
-  height: 98px;
+  margin-top: 94px;
 }
 
-.features-menu {
+.fetures-menu {
   display: flex;
-  margin-left: 215px;
+  height: 98px;
+  padding-left: 0;
+}
+
+.fetures-list {
+  width: 270px;
+  height: auto;
   margin-right: 30px;
+}
+
+.fetures-list:last-child {
+  margin-right: 0;
 }
 
 .fetures-title {
@@ -160,6 +186,7 @@ h1, h2, h3, h4,h5, h6, p, ul {
 }
 
 .fetures-text {
+  margin-top: 10px;
   font-weight: 400;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
@@ -170,46 +197,39 @@ h1, h2, h3, h4,h5, h6, p, ul {
 
 .activity {
   margin-top: 94px;
-  margin-left: 215px;
-  width: 1170px;
-  height: 386px;
-  text-align: center;
 }
 
 .activity-title {
-  margin-bottom: 50px;
+  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
   letter-spacing: 0.03em;
   color: var(--main-color);
+}
+
+.icones-title {
+  display: flex;
+}
+
+.activity-icons {
+  width: 370px;
+  height: 294px;
+  margin-top: 50px;
+  margin-right: 30px;
+}
+.activity-icons:last-child {
+  margin-right: 0;
 }
 
 /* our team */
 
 .our-team {
   margin-top: 94px;
-  margin-left: 215px;
-  justify-content: center;
   text-align: center;
 }
-
-.team-icone li {
-  outline: 1px solid;}
-
-.team-icone {
-  
-  display: flex;
-  margin-top: 50px;
-  margin-right: 30px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-}
-
-..team-icone:not()
 
 .team {
-  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
@@ -217,7 +237,27 @@ h1, h2, h3, h4,h5, h6, p, ul {
   color: var(--main-color);
 }
 
+.tem-menu {
+  display: flex;
+  margin-top: 50px;
+  padding-left: 0;
+  width: 1170px;
+}
+
+.team-list {
+  margin-right: 30px;
+  margin-bottom: 94px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background: #ffffff;
+}
+
+.team-list:last-child {
+  margin-right: 0;
+}
 .name {
+  margin-top: 30px;
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -226,6 +266,8 @@ h1, h2, h3, h4,h5, h6, p, ul {
 }
 
 .position {
+  margin-top: 10px;
+  padding-bottom: 30px;
   font-weight: 400;
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -235,15 +277,14 @@ h1, h2, h3, h4,h5, h6, p, ul {
 
 /* footer */
 
-.footer-line {
-  width: 1600px;
-  height: 252px;
+.line-footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #2f303a;
 }
 
 .logo-footer {
   margin-top: 60px;
-  margin-left: 215px;
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
@@ -257,20 +298,19 @@ h1, h2, h3, h4,h5, h6, p, ul {
   color: #ffffff;
 }
 
-.footer-addres {
-  margin-left: 215px;
+.footer-adsress {
   margin-top: 20px;
-}
-
-.address {
   font-weight: 400;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: #ffffff;
 }
 
+.footer-nav {
+  padding-left: 0;
+}
+
 .footer-contacts {
-  display: block;
   font-weight: 400;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
@@ -279,25 +319,25 @@ h1, h2, h3, h4,h5, h6, p, ul {
 
 /* portfolio page */
 
-.filter {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  min-width: 575px;
+.menu-button {
   margin-bottom: 34px;
-}
-.filr-button:not(last-child) {
-  margin-right: 8px;
+  margin-top: 94px;
+  margin-left: 297px;
+  display: flex;
 }
 
 .filr-button {
-display: inline-block;
+  display: inline-block;
+  padding: 6px 22px;
+  border-radius: 4px;
+  margin-left: 8px;
   cursor: pointer;
   font-weight: 500;
   font-size: 16px;
   line-height: calc(26 / 16);
   letter-spacing: 0.03em;
   color: var(--main-color);
+  background-color: #f5f4fa;
 }
 .filr-button:hover,
 .filr-button:focus {
@@ -305,15 +345,30 @@ display: inline-block;
   color: #ffffff;
 }
 
-.icon-menu {
+.filtr-icone {
   display: flex;
   flex-wrap: wrap;
-  margin-right: 30px;
+  padding-left: 0;
+  width: 1170px;
 }
-.icon-menu:nth-child(3n) {margin-right: 0px;}
 
+.item-filtr {
+  width: 370px;
+  height: 404px;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  border: 1px solid #eeeeee;
+}
+
+.item-filtr:nth-child(3n) {
+  margin-right: 0;
+}
 
 .projeck-name {
+  margin-top: 20px;
+  margin-left: 24px;
   font-weight: 700;
   font-size: 18px;
   line-height: calc(36 / 18);
@@ -322,19 +377,11 @@ display: inline-block;
 }
 
 .project-type {
-
+  margin-top: 4px;
+  margin-left: 24px;
   font-weight: 400;
   font-size: 16px;
   line-height: calc(30 / 16);
   letter-spacing: 0.03em;
-  color: var(--second-color);}
-
-
-
-  .icon-menu {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .icon-menu li {
-    outline: 1px solid;
-  }
+  color: var(--second-color);
+}
