--- a/css/styles.css
+++ b/css/styles.css
@@ -126,14 +126,19 @@ ul { padding-left: 0;}
 /* hero */
 
 .hero {
-  height: 600px;
+  text-align: center;
+  border: 1px solid #ECECEC
   text-align: center;
   background-color: #2f303a;
 }
 
+.hero .container {
+  margin-top: 0;
+}
+
 .hero-title {
+  margin-left: 200px;
   padding-top: 200px;
-  text-align: center;
   width: 696px;
   font-weight: 900;
   font-size: 44px;
