--- a/css/styles.css
+++ b/css/styles.css
@@ -48,13 +48,12 @@ ul {
 ul { padding-left: 0;}
 
 .container {
-  width: 1170px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 94px;
-  margin-bottom: 94px;
+
 }
 
 button {
@@ -214,10 +213,12 @@ color: #2196f3;
 /* activity */
 
 .activity {
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 
 .activity-title {
+  padding-bottom: 50px;
   text-align: center;
   font-weight: 700;
   font-size: 36px;
@@ -233,8 +234,7 @@ color: #2196f3;
 .activity-icons {
   width: 370px;
   height: 294px;
-  margin-top: 50px;
-  margin-right: 30px;
+    margin-right: 30px;
 }
 .activity-icons:last-child {
   margin-right: 0;
@@ -250,6 +250,7 @@ color: #2196f3;
 }
 
 .team {
+  padding-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
@@ -259,7 +260,6 @@ color: #2196f3;
 
 .tem-menu {
   display: flex;
-  margin-top: 50px;
   padding-left: 0;
   width: 1170px;
 }
